Beginning the wrap up for the project, removing scaffoldings, formatting the nav bar correctly, removing global margins

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,7 +5,43 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+/*IMPORTING FONTS */
 
+@font-face {
+font-family: lato-regular;
+src: url("../assets/fonts/Lato/Lato-Regular.ttf") format("truetype");
+}
+@font-face {
+font-family: lato-light;
+src: url("../assets/fonts/Lato/Lato-Light.ttf") format("truetype");
+}
+@font-face {
+font-family: lato-thin;
+src: url("../assets/fonts/Lato/Lato-Thin.ttf") format("truetype");
+}
+@font-face {
+font-family: lato-bold;
+src: url("../assets/fonts/Lato/Lato-Bold.ttf") format("truetype");
+}
+@font-face {
+font-family: almarai-regular;
+src: url("../assets/fonts/Almarai/Almarai-Regular.ttf") format("truetype");
+}
+@font-face {
+font-family: almarai-bold;
+src: url("../assets/fonts/Almarai/Almarai-Bold.ttf") format("truetype");
+}
+@font-face {
+font-family: megrim;
+src: url("../assets/fonts/Megrim-Regular.ttf") format("truetype");
+}
+
+.headingfont{
+  font-family: 'lato-regular';
+  color:#B5B5B5;
+  font-size:33px;
+
+}
 html{
 
  }
@@ -34,9 +70,8 @@ html{
 
 .topbar{
   width: 100%;
-  height:60px;
-  font-family:noto sans light;
-  font-size:32px;
+  height:70px;
+
 }
 
 
