--- a/src/app/verticalsidebar/verticalsidebar.component.css
+++ b/src/app/verticalsidebar/verticalsidebar.component.css
@@ -128,7 +128,7 @@ button{
 .buttonfont{
       font-family: noto sans light;
       width:100%;
-      background-color: #00ACEE;
+      /* background-color: #00ACEE; */
 
 }
  /* hr {
